--- a/huntweb/src/pages/main/styles.css
+++ b/huntweb/src/pages/main/styles.css
@@ -54,6 +54,16 @@
   font-weight: bold;
   cursor: pointer;
 }
+
+.product-list .actions button[disabled] {
+  opacity: 0.5;
+  cursor: default;
+}
+
+.product-list .actions button[disabled]:hover {
+  opacity: 0.5;
+}
+
 .product-list .actions button:hover {
   opacity: 0.7;
 }
